Closed Bug 1187345 Opened 9 years ago Closed 9 years ago

Fix HwcComposer2D::mCompositorParent handling

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

HwcComposer2D hold a pointer to CompositorParent even after CompositorParent is destroyed. It seems not good.
Blocks: 1186000
Assignee: nobody → sotaro.ikeda.g
Attachment #8638570 - Flags: review?(mwu)
Comment on attachment 8638570 [details] [diff] [review]
patch - Fix HwcComposer2D::mCompositorParent handling

Review of attachment 8638570 [details] [diff] [review]:
-----------------------------------------------------------------

Makes sense. Don't know if I can review nsBaseWidget.h - up to you if you want to get another reviewer for that.
Attachment #8638570 - Flags: review?(mwu) → review+
Thanks, your review is enough for the patch, I think.
https://hg.mozilla.org/mozilla-central/rev/cac950e9abb4
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: