Bug 1187345 - Fix HwcComposer2D::mCompositorParent handling r=mwu